--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "crx3": "^1.1.2",
     "node-cron": "^2.0.3",
     "request": "^2.88.2",
     "ssl-root-cas": "^1.3.1"
